dark mode added

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: all 0.4s ease-in-out;
 }
 
 .scrollBar::-webkit-scrollbar {
@@ -72,3 +73,6 @@ body::-webkit-scrollbar-thumb {
     opacity: 0.5;
   }
 }
+
+/* dark-ligh mode */
+
